[package]
name = "defile"
version = "0.2.1"  # Keep in sync
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
edition = "2018"

description = "Proc-macro helper to ungroup macro metavariables"
documentation = "https://docs.rs/defile"
homepage = "https://crates.io/crates/defile"
repository = "https://github.com/danielhenrymantilla/rust-defile"

license = "Zlib OR MIT OR Apache-2.0"

[dependencies.defile-proc_macros]
path = "src/proc_macros"
version = "=0.2.1"  # Keep in sync

[workspace]
members = [
    "src/proc_macros",
]

[features]
better-docs = [  # Unstable!
]

[package.metadata.docs.rs]
features = [
    "better-docs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
